--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 /tmp
 /out-tsc
 /bazel-out
+/src/environments/environment.development.ts
+/src/environments/environment.ts
+src/environments/environment.development.ts
+src/environments/environment.ts
 
 # Node
 /node_modules
