--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "@ngrx/signals": "^17.2.0",
     "@supabase/supabase-js": "^2.43.0",
+    "moment": "^2.30.1",
     "ng-recaptcha": "^13.2.1",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
