--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 server {
-    listen $YOUR_PORT;
+    # listen $YOUR_PORT;
+    listen 4200;
     server_name localhost;
 
     # Serve static files
