configurando integracion continua y variable de entorno prod

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,39 +38,35 @@ jobs:
           docker build . --tag ghcr.io/jfloresq1987/video-generator-front:latest
           docker push ghcr.io/jfloresq1987/video-generator-front:latest
 
-  # deploy:
-  #   needs: create-docker-image
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     PORT: 80
-  #     STRIPE_PRIVATE_KEY: ${{ secrets.STRIPE_PRIVATE_KEY }}
-  #     SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-  #     SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
-  #     SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-  #     RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
-  #     WEBHOOK_END_POINT_SECRET: ${{ secrets.WEBHOOK_END_POINT_SECRET }}
-  #     WEB_URL: http://localhost:4200/sales
-  #   steps:
-  #     - name: Install sshpass
-  #       run: sudo apt-get install sshpass
+  deploy:
+    needs: create-docker-image
+    runs-on: ubuntu-latest
+    env:
+      apiURL: http://happychecho.qhatuyki.shop/api
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+      SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+      RECAPTCHA_V3_STACKBLITZ_KEY: ${{ secrets.RECAPTCHA_V3_STACKBLITZ_KEY }}
+      RECAPTCHA_V2_DUMMY_KEY: ${{ secrets.RECAPTCHA_V2_DUMMY_KEY }}      
+    steps:
+      - name: Install sshpass
+        run: sudo apt-get install sshpass
 
-  #     - name: SSH into Server
-  #       run: |
-  #         sshpass -p '${{ secrets.AUTH_PASS }}' ssh -o StrictHostKeyChecking=no ${{ secrets.AUTH_SERVER }} << EOF
-  #           cd /var/www/video-generator-front/
-  #           docker login ghcr.io -u jfloresq1987 -p ${{ secrets.TOKEN_TEST_CD }}
-  #           docker pull ghcr.io/jfloresq1987/video-generator-front:latest
-  #           docker stop video-generator-front && docker rm video-generator-front
-  #           docker run -d \
-  #           -e PORT=$PORT \
-  #           -e STRIPE_PRIVATE_KEY=$STRIPE_PRIVATE_KEY \
-  #           -e SUPABASE_URL=$SUPABASE_URL \
-  #           -e SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY \
-  #           -e SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY \
-  #           -e RESEND_API_KEY=$RESEND_API_KEY \
-  #           -e WEBHOOK_END_POINT_SECRET=$WEBHOOK_END_POINT_SECRET \
-  #           -e WEB_URL=$WEB_URL \
-  #           --name video-generator-front \
-  #           -p 80:80 \
-  #           ghcr.io/jfloresq1987/video-generator-front:latest
-  #         EOF
+      - name: SSH into Server
+        run: |
+          sshpass -p '${{ secrets.AUTH_PASS }}' ssh -o StrictHostKeyChecking=no ${{ secrets.AUTH_SERVER }} << EOF
+            cd /var/www/video-generator-front/
+            docker login ghcr.io -u jfloresq1987 -p ${{ secrets.TOKEN_TEST_CD }}
+            docker pull ghcr.io/jfloresq1987/video-generator-front:latest
+            docker stop video-generator-front && docker rm video-generator-front
+            docker run -d \
+            -e apiURL=$apiURL \            
+            -e SUPABASE_URL=$SUPABASE_URL \
+            -e SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY \
+            -e SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY \
+            -e RECAPTCHA_V3_STACKBLITZ_KEY=$RECAPTCHA_V3_STACKBLITZ_KEY \
+            -e RECAPTCHA_V2_DUMMY_KEY=$RECAPTCHA_V2_DUMMY_KEY \            
+            --name video-generator-front \
+            -p 80:80 \
+            ghcr.io/jfloresq1987/video-generator-front:latest
+          EOF
