--- a/nginx.conf
+++ b/nginx.conf
@@ -5,9 +5,9 @@ server {
 
     # Serve static files
     location / {
-        root /var/www/html;
+        # root /var/www/html;
+        root /var/www/app;
         index index.html;
-
-        try_files $uri $uri/ /index.html; 
+        try_files $uri $uri/ /index.html index.html;
     }
 }
