configuracion de docker y variable de entorno

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,7 +52,8 @@ jobs:
             docker login ghcr.io -u jfloresq1987 -p ${{ secrets.TOKEN_TEST_CD }}
             docker pull ghcr.io/jfloresq1987/video-generator-front:latest
             docker stop video-generator-front && docker rm video-generator-front
-            docker run -d \    
+            docker run -d \
+            -e apiURL=http://happychecho.qhatuyki.shop/api \
             --name video-generator-front \
             -p 4200:4200 \
             ghcr.io/jfloresq1987/video-generator-front:latest
