--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,8 +53,12 @@ jobs:
             docker pull ghcr.io/jfloresq1987/video-generator-front:latest
             docker stop video-generator-front && docker rm video-generator-front
             docker run -d \
-            -e apiURL=qwe \
-            -e SUPABASE_URL=asd \
+            -e apiURL=http://happychecho.qhatuyki.shop/api \
+            -e SUPABASE_URL=$SUPABASE_URL \
+            -e SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY \
+            -e SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY \
+            -e RECAPTCHA_V3_STACKBLITZ_KEY=$RECAPTCHA_V3_STACKBLITZ_KEY \
+            -e RECAPTCHA_V2_DUMMY_KEY=$RECAPTCHA_V2_DUMMY_KEY \
             --name video-generator-front \
             -p 4200:4200 \
             ghcr.io/jfloresq1987/video-generator-front:latest
