--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,13 @@ on:
 jobs:
   create-docker-image:
     runs-on: ubuntu-latest
+    env:
+      apiURL: http://happychecho.qhatuyki.shop/api
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+      SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+      RECAPTCHA_V3_STACKBLITZ_KEY: ${{ secrets.RECAPTCHA_V3_STACKBLITZ_KEY }}
+      RECAPTCHA_V2_DUMMY_KEY: ${{ secrets.RECAPTCHA_V2_DUMMY_KEY }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
@@ -53,7 +60,7 @@ jobs:
             docker pull ghcr.io/jfloresq1987/video-generator-front:latest
             docker stop video-generator-front && docker rm video-generator-front
             docker run -d \
-            -e apiURL=http://happychecho.qhatuyki.shop/api \
+            -e apiURL=$apiURL \
             -e SUPABASE_URL=$SUPABASE_URL \
             -e SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY \
             -e SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY \
