configuracion de docker y variable de entorno

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "ng": "ng",
     "config": "node ./config/set-env.config.js",
-    "start": "--environment=dev ng serve -o",
-    "build2": "ng build --environment=prod --configuration production",
-    "build": "npm run config -- --environment=prod && ng build --configuration production",
+    "start": "ng serve -o",
+    "build": "ng build --configuration production",
+    "build2": "npm run config -- --environment=prod && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
