configuracion de docker y variable de entorno

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,13 +15,13 @@ on:
 jobs:
   create-docker-image:
     runs-on: ubuntu-latest
-    env:
-      apiURL: http://happychecho.qhatuyki.shop/api
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
-      SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-      RECAPTCHA_V3_STACKBLITZ_KEY: ${{ secrets.RECAPTCHA_V3_STACKBLITZ_KEY }}
-      RECAPTCHA_V2_DUMMY_KEY: ${{ secrets.RECAPTCHA_V2_DUMMY_KEY }}
+    # env:
+    #   apiURL: http://happychecho.qhatuyki.shop/api
+    #   SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+    #   SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+    #   SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+    #   RECAPTCHA_V3_STACKBLITZ_KEY: ${{ secrets.RECAPTCHA_V3_STACKBLITZ_KEY }}
+    #   RECAPTCHA_V2_DUMMY_KEY: ${{ secrets.RECAPTCHA_V2_DUMMY_KEY }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
