--- a/src/environments/config.json
+++ b/src/environments/config.json
@@ -3,6 +3,6 @@
   "SUPABASE_URL": "${SUPABASE_URL}",
   "SUPABASE_ANON_KEY": "${SUPABASE_ANON_KEY}",
   "SUPABASE_SERVICE_ROLE_KEY": "${SUPABASE_SERVICE_ROLE_KEY}",
-  "RECAPTCHA_V3_STACKBLITZ_KEY": "{$RECAPTCHA_V3_STACKBLITZ_KEY}",
+  "RECAPTCHA_V3_STACKBLITZ_KEY": "${RECAPTCHA_V3_STACKBLITZ_KEY}",
   "RECAPTCHA_V2_DUMMY_KEY": "${RECAPTCHA_V2_DUMMY_KEY}"
 }
