--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,5 +1,5 @@
 {
-  "apiURL": "XXX",
+  "apiURL": "http://happychecho.qhatuyki.shop/api",
   "SUPABASE_URL": "${SUPABASE_URL}",
   "SUPABASE_ANON_KEY": "${SUPABASE_ANON_KEY}",
   "SUPABASE_SERVICE_ROLE_KEY": "${SUPABASE_SERVICE_ROLE_KEY}",
