--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,7 +62,7 @@ jobs:
     needs: create-docker-image
     runs-on: ubuntu-latest
     env:
-      apiURL: http://happychecho.qhatuyki.shop/api222
+      apiURL: http://happychecho.qhatuyki.shop/api
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
       SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
