--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
   create-docker-image:
     runs-on: ubuntu-latest
     # env:
-    #   apiURL: http://happychecho.qhatuyki.shop/api
+    #   API_URL: http://happychecho.qhatuyki.shop/api
     #   SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
     #   SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
     #   SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
@@ -62,7 +62,7 @@ jobs:
     needs: create-docker-image
     runs-on: ubuntu-latest
     env:
-      apiURL: http://happychecho.qhatuyki.shop/api
+      API_URL: http://happychecho.qhatuyki.shop/api
       SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
       SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
       SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
@@ -80,7 +80,7 @@ jobs:
             docker pull ghcr.io/jfloresq1987/video-generator-front:latest
             docker stop video-generator-front && docker rm video-generator-front
             docker run -d \
-            -e apiURL=$apiURL \
+            -e API_URL=$API_URL \
             -e SUPABASE_URL=$SUPABASE_URL \
             -e SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY \
             -e SUPABASE_SERVICE_ROLE_KEY=$SUPABASE_SERVICE_ROLE_KEY \
